partial rest requests
